@@ -1,2 +1,1 @@
-#!/usr/bin/python 
 # -*- coding: utf-8 -*-
